@@ -36,7 +36,7 @@ public class CancelUserTaskRun extends AbstractStep {
                     .build());
         } else {
             throw new IllegalArgumentException(
-                    "Node run %s in thread %s is not a user task".formatted(nodeRunNumber, threadRunNumber));
+                    String.format("Node run %s in thread %s is not a user task", nodeRunNumber, threadRunNumber));
         }
     }
 }
